# drone_firmware

./: CMake_tutorial.MD  README.md  block_schematic.graphml  cmake_settings.MD  data_base.docx  flasher_nuance.MD  hardware.MD  log  other_problem.MD  software_level.graphml  stm32_notes.docx  ~$ta_base.docx  Инсрукция_Настройка_окружения_для_сборки_iNAV_на_Windows.MD
base_project/: CMakeLists.txt  README.md
base_project/inc/: debug.h  drone_time.h  fc_init.h  flight_data.h  iface.h  main.h  math_2.h  motors.h  scheduler.h  tasks.h
base_project/src/: debug.c  drone_time.c  fc_init.c  flight_data.c  iface.c  main.c  scheduler.c  tasks.c
code/: CMakeLists.txt  feature.c  logic.c  main.c  telemetry.c
wind_parameters/: CMakeLists.txt  README.md  test_wind_parameters.c  wind_parameters.c  wind_parameters.h
